More responsive fixes

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             The core functions of our system are the following:
           </p>
           <br>
-          <ul class="fa-ul text-m text-color" id="statistic-listing">
+          <ul class="fa-ul" id="statistic-listing">
             <li><i class="fa-li fa fa-check-circle-o"></i>Reading out the components and uplinks utilisations via SNMP
             </li>
             <li><i class="fa-li fa fa-check-circle-o"></i>A VCS for device configurations</li>
@@ -467,8 +467,8 @@
             </div>
             <div class="col-md-6 footer-left text-left">
               <p>Rennweg 89b, 1030 Vienna, Austria.</p>
-              <div class="tag-row">
-                <span>info@elbrus-analytics.at</span>
+              <div class="tag-row" id="footer-contacts">
+                <span>info@elbrus-analytics.at</span><br class="removed-br">
                 <span>+43 664 73223990</span>
               </div>
             </div>
@@ -492,13 +492,13 @@
         </div>
         <div class="row copy-row">
           <div class="col-md-12 copy-text">
-            <a href="http://elbrus-analytics.at/" target="_blank" rel="noopener noreferrer">© 2022 Elbrus-Analytics -
-              All
-              about your network
+            <a href="http://elbrus-analytics.at/" target="_blank" rel="noopener noreferrer">© 2022 Elbrus-Analytics - All about your network
+              <br class="removed-br-2"><br class="removed-br-2">
               <span id="credit">Website created and modified by Alexander Hiermann</span>
             </a>
             <br>
             <a href="http://www.freepik.com" target="_blank" rel="noopener noreferrer">
+              <br class="removed-br-2">
               <span id="credit">Icons designed by rawpixel.com / Freepik</span>
             </a>
           </div>
