--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="animations.css">
   <link rel="stylesheet" href="contact-form.css">
   <link rel="stylesheet" href="../skin.css">
+  <link rel="stylesheet" href="https://s.pageclip.co/v1/pageclip.css" media="screen">
 </head>
 
 <body class="transparent-header">
@@ -376,7 +377,7 @@
         <div class="col-md-6 col-sm-12">
           <h2 class="text-color">Contact us now</h2>
           <br>
-          <form action="http://www.framework-y.com/scripts/php/contact-form.php" class="form-box form-ajax"
+          <form action="https://send.pageclip.co/brBxh2OHBus3mhwnXOf7WhhFdPZm2Pf5" class="form-box form-ajax"
             method="post">
             <div class="row">
               <div class="col-md-4">
@@ -399,7 +400,9 @@
                 <textarea id="messagge" name="messagge" placeholder="" class="form-control form-valu e"
                   required></textarea>
                 <br>
-                <a class="circle-button btn-sm btn" id="form-button"><i class="fa fa-send-o"></i>Send message</a>
+                <button id="form-button" type="submit" class="circle-button btn-sm btn">
+                  <span>Send message</span>
+                </button>
               </div>
             </div>
           </form>
@@ -500,6 +503,7 @@
         </div>
       </div>
     </footer>
+    <script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
 </body>
 
 </html>
