--- a/index.html
+++ b/index.html
@@ -40,16 +40,6 @@
           </div>
           <div class="collapse navbar-collapse">
             <div class="nav navbar-nav navbar-right">
-              <ul class="nav navbar-nav">
-                <li class="dropdown">
-                  <a class="dropdown-toggle" data-toggle="dropdown" role="button">Pages<span class="caret"></span></a>
-                  <ul class="dropdown-menu multi-level">
-                    <li><a href="https://github.com/Elbrus-Analytics" target="_blank"
-                        rel="noopener noreferrer">GitHub</a></li>
-                    <li><a href="https://www.instagram.com/elbrusanalytics" target="_blank"
-                        rel="noopener noreferrer">Instagram</a></li>
-                </li>
-              </ul>
               <li class="dropdown">
                 <a href="#about-us-ref" data-toggle="#about-us-ref" role="button">About us</a>
               </li>
@@ -224,7 +214,7 @@
       </div>
     </div>
     <div class="section-empty section-item text-center">
-      <div class="container content" id="team-ref">
+      <div class="container content" id="team-ref" data-hs-anchor="true">
         <h2>Meet the Team</h2>
         <p>
           Meet our team of young, aspiring students!
@@ -353,6 +343,7 @@
     </div>
     <br><br>
     <div class="container content" id="map">
+      <div id="contact-us-ref" data-hs-anchor="true"></div>
       <script>
         var map
         var coordinates = { lat: 48.19126588475009, lng: 16.397755667336323 };
@@ -470,7 +461,7 @@
               </div>
             </div>
             <div class="col-md-3 footer-left text-right text-left-sm">
-              <div class="btn-group social-group btn-group-icons">
+              <div class="btn-group social-group btn-group-icons" id="footer-contact-logos">
                 <a href="https://github.com/Elbrus-Analytics" data-social="share-github" target="_blank"
                   rel="noopener noreferrer">
                   <i><img src="images/icons/github_logo.png" /></i>
