--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                   <a target="_blank" href="https://github.com/RobertUNF"><i class="fa fa-facebook">
                       <img class="icon" src="images/icons/github_logo_black.png" />
                     </i></a>
-                  <a target="_blank" href="https://www.linkedin.com/in/robert-unfried-a008b5224/"><i
+                  <a target="_blank" href="https://www.linkedin.com/in/robert-unfried/"><i
                       class="fa fa-facebook">
                       <img class="icon" src="images/icons/linkedin_logo_black" />
                     </i></a>
@@ -339,11 +339,12 @@
             </div>
           </div>
         </div>
+        <br id="contact-us-ref">
       </div>
     </div>
-    <br><br>
+    <br>
     <div class="container content" id="map">
-      <div id="contact-us-ref" data-hs-anchor="true"></div>
+      <div data-hs-anchor="true"></div>
       <script>
         var map
         var coordinates = { lat: 48.19126588475009, lng: 16.397755667336323 };
