--- a/index.html
+++ b/index.html
@@ -345,24 +345,9 @@
     <br>
     <div class="container content" id="map">
       <div data-hs-anchor="true"></div>
-      <script>
-        var map
-        var coordinates = { lat: 48.19126588475009, lng: 16.397755667336323 };
-        function initMap() {
-          map = new google.maps.Map(document.getElementById("map"), {
-            zoom: 18,
-            center: coordinates,
-          });
-          new google.maps.Marker({
-            position: coordinates,
-            map,
-            title: "Our headquarters: HTL Rennweg",
-          });
-        }
-        window.initMap = initMap;
-      </script>
-      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYQyd3NFM4aAbLXXFqJrr9LNvJ490LUGI&callback=initMap"
-        defer></script>
+      <iframe id="google-map"
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2659.8105774332403!2d16.39565561587391!3d48.19100105541715!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x476d075e036ac393%3A0x9326dcbe2d63c038!2sHTL%20Rennweg!5e0!3m2!1sen!2sat!4v1655635189319!5m2!1sen!2sat"
+        frameborder="0" scrolling="no" height="400"></iframe>
     </div>
     <div class="container content">
       <div class="row proporzional-row" id="contact-us-now-div">
