Uploaded team pictures, updated header image

--- a/index.html
+++ b/index.html
@@ -60,8 +60,13 @@
     data-natural-width="1920" data-parallax="scroll" data-image-src="images/starting-hub_image3.png">
     <div class="container content">
       <br><br><br>
-      <h1 class="white head_title">Analyse with Elbrus Analytics</h1>
-      <p class="head_title" id="tagline">Better insights, better traffic flow, better network</p>
+      <div id="header_title">
+        <h1 class="white head_title"><span class="">Analyse with Elbrus Analytics</span></h1>
+        <p class="head_title" id="tagline"><span>Better insights, better traffic flow, better network</span>
+        </p>
+      </div>
+      <br><br>
+      <br><br>
       <br><br>
       <a href="https://github.com/Elbrus-Analytics" target="_blank" rel="noopener noreferrer"
         class="circle-button btn btn-lg">Get started</a>
@@ -85,8 +90,6 @@
               The larger your Network, the more likely you are to be attacked, therefore, having an Overview is
               esential!
             </p>
-            <a href="https://github.com/Elbrus-Analytics" target="_blank" rel="noopener noreferrer"
-              class="circle-button btn-border btn btn-lg">See more</a>
           </div>
         </div>
         <div class="col-md-4">
@@ -99,8 +102,6 @@
               In order to keep on track with your Network, Analysis and Insights are needed. <br> Elbrus-Analytics
               provides these for you.
             </p>
-            <a href="https://github.com/Elbrus-Analytics" target="_blank" rel="noopener noreferrer"
-              class="circle-button btn-border btn btn-lg">See more</a>
           </div>
         </div>
         <div class="col-md-4">
@@ -113,8 +114,6 @@
             <p>
               Complex data is difficult to understand for non-techies. Good-looking diagrams are the solution.
             </p>
-            <a href="https://github.com/Elbrus-Analytics" target="_blank" rel="noopener noreferrer"
-              class="circle-button btn-border btn btn-lg">See more</a>
           </div>
         </div>
       </div>
@@ -224,7 +223,7 @@
           <div class="col-md-3">
             <div class="advs-box niche-box-team" data-anima="scale-up" data-trigger="hover">
               <a class="img-box">
-                <img class="anima" src="images/team/team-01.png" alt="" />
+                <img class="anima" src="images/team/team-01.jpeg" alt="" />
               </a>
               <div class="content-box">
                 <h2>Fabio Anzola</h2>
@@ -249,7 +248,7 @@
           <div class="col-md-3">
             <div class="advs-box niche-box-team" data-anima="scale-up" data-trigger="hover">
               <a class="img-box">
-                <img class="anima" src="images/team/team-02.png" alt="" />
+                <img class="anima" src="images/team/team-02-mirrored.jpeg" alt="" />
               </a>
               <div class="content-box">
                 <h2>Markus Tomsik</h2>
@@ -268,7 +267,7 @@
           <div class="col-md-3">
             <div class="advs-box niche-box-team" data-anima="scale-up" data-trigger="hover">
               <a class="img-box">
-                <img class="anima" src="images/team/team-03.png" alt="" />
+                <img class="anima" src="images/team/team-03.jpg" alt="" />
               </a>
               <div class="content-box">
                 <h2>Alexander Hiermann</h2>
@@ -315,7 +314,7 @@
           <div class="col-md-3">
             <div class="advs-box niche-box-team" data-anima="scale-up" data-trigger="hover">
               <a class="img-box">
-                <img class="anima" src="images/team/team-05.png" alt="" />
+                <img class="anima" src="images/team/team-05-mirrored.jpeg" alt="" />
               </a>
               <div class="content-box">
                 <h2>Robert Unfried</h2>
@@ -324,8 +323,7 @@
                   <a target="_blank" href="https://github.com/RobertUNF"><i class="fa fa-facebook">
                       <img class="icon" src="images/icons/github_logo_black.png" />
                     </i></a>
-                  <a target="_blank" href="https://www.linkedin.com/in/robert-unfried/"><i
-                      class="fa fa-facebook">
+                  <a target="_blank" href="https://www.linkedin.com/in/robert-unfried/"><i class="fa fa-facebook">
                       <img class="icon" src="images/icons/linkedin_logo_black" />
                     </i></a>
                   <a target="_blank" href="https://www.instagram.com/robert_unf/"><i class="fa fa-facebook">
