--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
           <div class="col-md-3">
             <div class="advs-box niche-box-team" data-anima="scale-up" data-trigger="hover">
               <a class="img-box">
-                <img class="anima" src="images/team/team-04.png" alt="" />
+                <img class="anima" src="images/team/team-04.jpeg" alt="" />
               </a>
               <div class="content-box">
                 <h2>Tobias Schmidt</h2>
