Added new live demo button with new logos in white

--- a/index.html
+++ b/index.html
@@ -116,7 +116,12 @@
                         class="hover:underline">Vienna HTL3 Rennweg</a>. Get crucial information about traffic flow and
                     bottlenecks within your network!</p>
                 <div class="space-y-4 sm:flex sm:space-y-0 sm:space-x-4">
-                    <a href="https://github.com/Elbrus-Analytics/"
+                    <a href="https://htl3r.elbrus-analytics.at" target="_blank"
+                        class="text-white bg-purple-700 inline-flex items-center justify-center w-full px-5 py-3 text-sm font-medium text-center border border-gray-200 rounded-lg sm:w-auto hover:bg-purple-700 focus:ring-4 focus:ring-gray-100 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700 dark:focus:ring-gray-800">
+                        <img src="./images/logos/favicon_white_long.png" style="max-width: 28px;" alt="white elbrus image">
+                        HTL3R Live System
+                    </a>
+                    <a href="https://github.com/Elbrus-Analytics/" target="_blank"
                         class="inline-flex items-center justify-center w-full px-5 py-3 text-sm font-medium text-center text-gray-900 border border-gray-200 rounded-lg sm:w-auto hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700 dark:focus:ring-gray-800">
                         <svg class="w-4 h-4 mr-2 text-gray-500 dark:text-gray-400" xmlns="http://www.w3.org/2000/svg"
                             viewBox="0 0 496 512"><!-- Font Awesome Pro 5.15.4 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) -->
