--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                     </div>
                     <!-- <a href="#" class="text-gray-800 dark:text-white hover:bg-gray-50 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 sm:mr-2 dark:hover:bg-gray-700 focus:outline-none dark:focus:ring-gray-800">Log in</a> -->
                     <a href="mailto:info@elbrus-analytics.at"
-                        class="text-white bg-purple-700 hover:bg-purple-800 focus:ring-4 focus:ring-purple-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 sm:mr-2 lg:mr-0 dark:bg-purple-600 dark:hover:bg-purple-700 focus:outline-none dark:focus:ring-purple-800">Contact us!</a>
+                        class="text-white bg-purple-700 hover:bg-purple-800 focus:ring-4 focus:ring-purple-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 sm:mr-2 lg:mr-0 dark:bg-purple-600 dark:hover:bg-purple-700 focus:outline-none dark:focus:ring-purple-800">Contact
+                        us!</a>
                     <button data-collapse-toggle="mobile-menu-2" type="button"
                         class="inline-flex items-center p-2 ml-1 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
                         aria-controls="mobile-menu-2" aria-expanded="false">
@@ -118,7 +119,8 @@
                 <div class="space-y-4 sm:flex sm:space-y-0 sm:space-x-4">
                     <a href="https://htl3r.elbrus-analytics.at" target="_blank"
                         class="text-white bg-purple-700 inline-flex items-center justify-center w-full px-5 py-3 text-sm font-medium text-center border border-gray-200 rounded-lg sm:w-auto hover:bg-purple-700 focus:ring-4 focus:ring-gray-100 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700 dark:focus:ring-gray-800">
-                        <img src="./images/logos/favicon_white_long.png" style="max-width: 28px;" alt="white elbrus image">
+                        <img src="./images/logos/favicon_white_long.png" style="max-width: 28px;"
+                            alt="white elbrus image">
                         HTL3R Live System
                     </a>
                     <a href="https://github.com/Elbrus-Analytics/" target="_blank"
@@ -314,25 +316,25 @@
             </div>
             <div class="col-span-2 space-y-8 md:grid md:grid-cols-2 md:gap-12 md:space-y-0">
                 <div>
-                    <img src="images/icons/bandwith_icon.png" style="max-width: 25%;" alt="icon"/>
+                    <img src="images/icons/bandwith_icon.png" style="max-width: 25%;" alt="icon" />
                     <h3 class="mb-2 text-2xl font-bold dark:text-white">1 Gigabit/s</h3>
                     <p class="font-light text-gray-500 dark:text-gray-400">bandwith support with highly efficienct
                         workflows to work in big networks</p>
                 </div>
                 <div>
-                    <img src="images/icons/report_icon.png" style="max-width: 25%;" alt="icon"/>
+                    <img src="images/icons/report_icon.png" style="max-width: 25%;" alt="icon" />
                     <h3 class="mb-2 text-2xl font-bold dark:text-white">96 Reports</h3>
                     <p class="font-light text-gray-500 dark:text-gray-400">daily delivered on a schedule of every 15
                         minutes</p>
                 </div>
                 <div>
-                    <img src="images/icons/code_icon.png" style="max-width: 25%;" alt="icon"/>
+                    <img src="images/icons/code_icon.png" style="max-width: 25%;" alt="icon" />
                     <h3 class="mb-2 text-2xl font-bold dark:text-white">21,000+ Lines</h3>
                     <p class="font-light text-gray-500 dark:text-gray-400">of code comprise our software development as
                         a whole</p>
                 </div>
                 <div>
-                    <img src="images/icons/visualisation_icon.png" style="max-width: 25%;" alt="icon"/>
+                    <img src="images/icons/visualisation_icon.png" style="max-width: 25%;" alt="icon" />
                     <h3 class="mb-2 text-2xl font-bold dark:text-white">20+ Charts & Graphs</h3>
                     <p class="font-light text-gray-500 dark:text-gray-400">highly detailed with easy-to-understand
                         diagrams</p>
@@ -430,7 +432,7 @@
                     </div>
                 </div>
                 <br><br>
-                <img src="./images/team/team-banner.jpeg" style="padding-left: 14%; max-width: 86%;"
+                <img src="./images/team/team-banner.png" style="padding-left: 14%; max-width: 86%;"
                     alt="Team banner image">
             </div>
         </div>
