Compressed team banner image

--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                     </div>
                 </div>
                 <br><br>
-                <img src="./images/team/team-banner.png" style="padding-left: 14%; max-width: 86%;"
+                <img src="./images/team/team-banner.jpg" style="padding-left: 14%; max-width: 86%;"
                     alt="Team banner image">
             </div>
         </div>
