--- a/index.html
+++ b/index.html
@@ -324,14 +324,13 @@
                 <div>
                     <img src="images/icons/report_icon.png" style="max-width: 25%;" alt="icon" />
                     <h3 class="mb-2 text-2xl font-bold dark:text-white">96 Reports</h3>
-                    <p class="font-light text-gray-500 dark:text-gray-400">daily delivered on a schedule of every 15
+                    <p class="font-light text-gray-500 dark:text-gray-400">delivered daily on a schedule of every 15
                         minutes</p>
                 </div>
                 <div>
                     <img src="images/icons/code_icon.png" style="max-width: 25%;" alt="icon" />
                     <h3 class="mb-2 text-2xl font-bold dark:text-white">21,000+ Lines</h3>
-                    <p class="font-light text-gray-500 dark:text-gray-400">of code comprise our software development as
-                        a whole</p>
+                    <p class="font-light text-gray-500 dark:text-gray-400">of code comprise our software</p>
                 </div>
                 <div>
                     <img src="images/icons/visualisation_icon.png" style="max-width: 25%;" alt="icon" />
